# replicated-log

./: Dockerfile  LICENSE  Makefile  docker-compose.yml  pyproject.toml  secondary.Dockerfile
protos/: log.proto  msg_replication.proto
src/: client.py  log_pb2.py  log_pb2_grpc.py  logging.yaml  master.py  master_client.py  msg_replication_pb2.py  msg_replication_pb2_grpc.py  secondary.py  secondary_client.py  server.py
