[tool.poetry]
name = "replicated-log"
version = "0.1.0"
description = ""
authors = ["mikescor <mykytyn.mykhailo@gmail.com>"]
readme = "README.md"
packages = [{include = "replicated_log"}]

[tool.poetry.dependencies]
python = "^3.10"
grpcio-tools = "^1.50.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
